# EconoSim

./: Cargo.toml  README.md  docker-compose.yml
data/: actionspace.yml  as.yml  company.yml  consumer.yml  init_world.yml  market.yml  marketplace.yml  nn.yml  plotting.gnuplot  processor.yml  producer.yml  recipes.yml  resources.yml  world.yml
monitoring_stack/: docker-compose.yml
src/: info.rs  lib.rs  main.rs  persistence.rs  player.rs  processor.rs  recipe.rs  resource.rs  stock.rs  visualization.rs  world.rs  worlddata.rs
src/economy/: company.rs  consumer.rs  mod.rs  processor.rs  producer.rs  recipe.rs  resource.rs  stock.rs
src/market/: marketplace.rs  mod.rs  offer.rs  order.rs
src/reinforcement_learning/: action.rs  action_space.rs  agent.rs  company_trainer.rs  deep_rl_agent.rs  domain.rs  mod.rs  neural_network.rs  qlearner.rs  state.rs  tdac.rs
src/reinforcement_learning/company/: action_space.rs  env.rs  mod.rs
src/rl_controller/: mod.rs  tdac.rs
src/world_data/: company_data.rs  consumer_data.rs  market_data.rs  mod.rs  processor_data.rs  producer_data.rs  recipe_data.rs  resource_data.rs
