[package]
name = "EconoSim"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "1.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = "3.2.22"
rsrl = "0.8.1"
